flow diagrams for reflective agents

--- a/.gitignore
+++ b/.gitignore
@@ -302,6 +302,9 @@ pyrightconfig.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+# Exclude personal Python environment settings
+.vscode/settings.json
+
 # Local History for Visual Studio Code
 .history/
 
